@@ -2,6 +2,7 @@ unreleased
 ==========
 
 - optional support for Android 13 A2DP Opus codec
+- bluealsa-aplay: fix volume synchronization on Raspberry Pi
 
 bluez-alsa v4.2.0 (2024-05-11)
 ==========
